# stock-market-analysis

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
data/: config.json
data/historical_data/: stock_data.csv
include/: AlertManager.h  DataFetcher.h  DataProcessor.h  Predictor.h  Visualizer.h
include/utils/: HttpClient.h  JSONParser.h  ThreadPool.h
src/: AlertManager.cpp  DataFetcher.cpp  DataProcessor.cpp  Predictor.cpp  Visualizer.cpp  main.cpp  testplot.cpp
src/utils/: HttpClient.cpp  JSONParser.cpp  ThreadPool.cpp
tests/: DataFetcherTests.cpp
